Fixed layout issue with app review tables

--- a/shared-memory-dump/style.css
+++ b/shared-memory-dump/style.css
@@ -513,6 +513,8 @@ table tr:hover td {
 
 td { text-align: left; }
 
+td p { margin-top: 0px; }
+
 /* Styling of tags */
 span.badge {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
